<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle_feed"
                style="@style/Title_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/postTitle" />

            <TextView
                android:id="@+id/txtReference_feed"
                style="@style/Text_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle_feed"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/postReference" />

            <ImageView
                android:id="@+id/imgOptions_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/icon_options" />

            <ImageView
                android:id="@+id/imgPost_feed"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/txtReference_feed"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/imgBoostCounter_feed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/imgPost_feed"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_boost" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgPost_feed"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgBoostCounter_feed"
                android:text="1,6K Boosts" />

            <Button
                android:id="@+id/BtnBoost_feed"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBoostCounter_feed"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@drawable/icon_boost"
                android:fontFamily="@font/questrial"
                android:text="@string/postBoost"
                android:textColor="@color/greyText"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>